--- a/debian/control
+++ b/debian/control
@@ -2,11 +2,11 @@ Source: python3-cyberfusion-file-support
 Section: misc
 Priority: optional
 Maintainer: William Edwards <wedwards@cyberfusion.nl>
-Build-Depends: python3-all, dh-python, debhelper (>= 10), python3-setuptools
+Build-Depends: python3-all, dh-python, debhelper (>= 10), python3-setuptools, python3-cyberfusion-common, python3-cyberfusion-queue-support
 Standards-Version: 4.3.0
 
 Package: python3-cyberfusion-file-support
 Architecture: all
-Depends: python3, python3-cyberfusion-common, python3-cyberfusion-queue-support (>= 1.1), ${misc:Depends}
+Depends: python3, ${python3:Depends}, ${misc:Depends}
 Description: Library for idempotent writing to files.
  Library for idempotent writing to files.
