--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,8 +20,8 @@ unit test and feature test:
   image: python:3.11
   script:
     - !reference [.add repositories, script]
-    - apt-get install -y python3-cyberfusion-common python3-cyberfusion-queue-support
     - pip install --no-cache-dir -r requirements/test.txt
+    - pip install .
     - PYTHONPATH=$CI_PROJECT_DIR/src:/usr/lib/python3/dist-packages pytest -n 10 -vvv --cov-branch --cov=cyberfusion.FileSupport --cov-config=.coveragerc --cov-fail-under=100 --junitxml=report-pytest.xml
   artifacts:
     reports:
